# KratosComply

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  LIMITATIONS_FIXED.md  README.md  STAGE_A_SUMMARY.md  STAGE_B_SUMMARY.md  STAGE_C_SUMMARY.md  STAGE_D_SUMMARY.md  STAGE_E_SUMMARY.md  STAGE_E_WORKFLOW.md  STAGE_F_DOCKER_CI.md  VERIFICATION_REPORT.md  conftest.py  docker-compose.prod.yml  docker-compose.yml
agent/: .dockerignore  Dockerfile  README.md  __init__.py  agent-self-scan.json  build-docker.sh  cli.py  docker-entrypoint.sh  pyproject.toml  report.json  requirements.txt  run_functional_tests.sh  test_agent.sh
agent/agent/: __init__.py  advanced_detectors.py  cli.py  compliance.py  config.py  control_model.py  detectors.py  findings.py  keystore.py  local_ai_detector.py  merkle.py  patch_ops.py  patcher.py  reporting.py  sandbox.py  signature.py  system_evidence.py  vulnerability_detectors.py
agent/functional-test-workspace/: test.py
agent/test-workspace/: app.py  config.yaml
agent/test-workspace/infra/: bucket.tf
agent/tests/: test_detectors.py  test_merkle.py  test_patcher.py  test_signing.py
backend/: .env.example  Dockerfile  README.md  __init__.py  database.py  ephemeral_worker.py  github_scan.py  github_service.py  human_evidence.py  main.py  models.py  pyproject.toml  schemas.py  security.py  test_ephemeral.py
backend/tests/: conftest.py  test_api.py  test_api_comprehensive.py
docs/: DOCKER_SETUP.md  GITHUB_OAUTH_SETUP.md  PRIVACY.md  acceptance-checklist.md  architecture.md
frontend/: Dockerfile  (+5 more)
(+65 files in other folders)
